# http_router

./: Cargo.toml  LICENSE  README.md
benches/: router.rs
examples/hyper_example/: Cargo.toml
examples/hyper_example/src/: controller.rs  error.rs  main.rs  repo.rs  types.rs  utils.rs
src/: lib.rs  method.rs  middleware.rs
