[package]
name = "http_router"
version = "0.1.0"
authors = ["Алексей Карасев <karasev.alexey@gmail.com>"]

[lib]
doctest = false

[features]
default = ["with_hyper"]
with_hyper = ["hyper"]

[dependencies]
regex = "1"
lazy_static = "1"
hyper = {version = ">= 0.12", optional = true}

[dev-dependencies]
rand = "0.5.5"
